src/objects/Bot_Dialog_Instance__c.object
<CustomObject>
    <fields>
        <fullName>Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Bot Dialog Instances</relationshipLabel>
        <relationshipName>Bot_Dialog_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dialog_Name__c</fullName>
        <label>Dialog Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Dialog_of_Goal__c</fullName>
        <label>First Dialog of Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_Name__c</fullName>
        <label>Goal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Label of the Dialog or the Goal because Dialog Name is the Dialog API Name with &quot;_&quot;.</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Customer_Input__c</fullName>
        <label>Last Customer Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Step__c</fullName>
        <label>Last Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Menu</fullName>
                </value>
                <value>
                    <fullName>NLP</fullName>
                </value>
                <value>
                    <fullName>Redirect</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Navigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routable_Id__c</fullName>
        <externalId>true</externalId>
        <label>Routable Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Back</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Redirected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Triggering_Customer_Input__c</fullName>
        <label>Triggering Customer Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Bot Dialog Instance</label>
    <nameField>
        <displayFormat>BDI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Dialog Instances</pluralLabel>
    <recordTypes>
        <fullName>Dialog</fullName>
        <active>true</active>
        <label>Dialog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Goal</fullName>
        <active>true</active>
        <label>Goal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>